# ChangeLog for games-misc/fortune-mod-mormon
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-mormon/ChangeLog,v 1.3 2007/03/12 15:49:21 genone Exp $

  12 Mar 2007; Marius Mauch <genone@gentoo.org>
  fortune-mod-mormon-1.1.0.ebuild:
  Replacing einfo with elog

  20 Oct 2006; Steve Dibb <beandog@gentoo.org>
  fortune-mod-mormon-1.1.0.ebuild:
  Forgot a module

*fortune-mod-mormon-1.1.0 (20 Oct 2006)

  20 Oct 2006; Steve Dibb <beandog@gentoo.org> +metadata.xml,
  +fortune-mod-mormon-1.1.0.ebuild:
  Initial import
