@@ -1,6 +1,6 @@
 # Copyright 2006-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-mormon/fortune-mod-mormon-1.1.0.ebuild,v 1.3 2007/03/12 15:49:20 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-mormon/fortune-mod-mormon-1.1.0.ebuild,v 1.4 2007/04/27 02:22:38 beandog Exp $
 
 DESCRIPTION="Fortune modules from the LDS scriptures (KJV Bible, Book of Mormon,
 D&C, PGP)"
@@ -8,7 +8,7 @@ HOMEPAGE="http://scriptures.nephi.org/"
 SRC_URI="mirror://sourceforge/mormon/${P}.tar.bz2"
 LICENSE="public-domain"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 ~x86-fbsd"
 IUSE=""
 RDEPEND="games-misc/fortune-mod
