@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-scriptures
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-scriptures/ChangeLog,v 1.3 2007/03/12 15:51:52 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-scriptures/ChangeLog,v 1.4 2007/04/27 02:19:43 beandog Exp $
+
+  27 Apr 2007; Steve Dibb <beandog@gentoo.org>
+  fortune-mod-scriptures-1.1.0.ebuild:
+  amd64 stable
 
   12 Mar 2007; Marius Mauch <genone@gentoo.org>
   fortune-mod-scriptures-1.1.0.ebuild:
